--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,33 @@
+html {
+  min-height: 100vh;
+}
+body {
+  min-height: 100vh;
+}
+
 body {
   margin: 0;
   font-family: "Roboto", sans-serif;
+  background-color: #232323 !important;
 }
 
-h1 {
-}
-
-#site-header {
+#header-wrapper {
   height: 100px;
-  max-width: 100%;
+  width: 100%;
   background-color: #232323;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  z-index: 1000;
+}
+
+#header {
+  width: 85%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 100px;
 }
 
 #site-logo {
@@ -29,13 +43,23 @@ h1 {
   flex-direction: row;
   width: 100%;
   height: 100%;
-  min-height: 600px;
+  margin: 0;
+  background-color: white;
+  padding-top: 100px;
+}
+
+#wrapper {
+  display: block;
+  width: 100%;
+  height: 100%;
   margin: 0;
 }
 
 #content {
   flex: 3;
-  padding: 40px 40px 40px 80px;
+  padding: 40px 100px;
+  height: 100%;
+  overflow-y: scroll;
 }
 
 #content h1 {
@@ -43,8 +67,15 @@ h1 {
 }
 
 #content h2,
+#content h3,
+#content h4,
 #content p {
   padding-left: 20px;
+}
+
+#content h3,
+#content h4 {
+  font-weight: 100;
 }
 
 #sidebar-right {
@@ -53,42 +84,44 @@ h1 {
   border-left: 1px solid rgb(219, 219, 220);
 }
 
-#sidebar-right ul {
+#sidebar-right .accordion {
   list-style-type: none;
-  margin-top: 80px;
+  margin-top: 40px;
+  margin-left: 30px;
   padding-inline-start: 0;
-  border-top: 1px solid rgb(219, 219, 220);
+  position: fixed;
+  top: 100px;
+  width: 100%;
 }
 
-#sidebar-right ul li {
-  padding: 15px 0 15px 30px;
-  list-style-type: none;
-  border-bottom: 1px solid rgb(219, 219, 220);
+#sidebar-right .bulleted {
+  margin-left: 40px;
 }
-#sidebar-right ul li a {
+
+#sidebar-right .accordion a {
   text-decoration: none;
 }
 
-#sidebar-right ul li a:hover {
+#sidebar-right .accordion a:hover {
   color: #76b7ff;
 }
 
-nav {
-  width: 250px;
+#nav {
+  width: 220px;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
 }
 
-nav a {
+#nav a {
   color: white;
   text-transform: uppercase;
   text-decoration: none;
 }
-nav a:hover {
+#nav a:hover {
   color: #76b7ff;
 }
 
-nav a.active {
+#nav a.active {
   color: #76b7ff;
 }
