--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,7 @@ body {
 
 #content {
   flex: 3;
-  padding: 40px 100px;
+  padding: 40px 100px 100px 100px;
   height: 100%;
   overflow-y: scroll;
 }
@@ -96,7 +96,7 @@ body {
 }
 
 #sidebar-right {
-  width: 30%;
+  width: 25%;
   background-color: #f2f2f2;
   border-left: 1px solid rgb(219, 219, 220);
 }
@@ -122,6 +122,24 @@ body {
 
 #sidebar-right .accordion a:hover {
   color: #76b7ff;
+}
+
+#footer-wrapper {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  display: flex;
+  background-color: #232323;
+  color: white;
+  padding: 0 80px;
+  align-items: center;
+  justify-content: space-between;
+}
+#footer-wrapper p {
+  margin: 0;
+  padding: 0;
 }
 
 #nav {
