--- a/styles.css
+++ b/styles.css
@@ -157,6 +157,7 @@ body {
   color: white;
   text-transform: uppercase;
   text-decoration: none;
+  margin-right: 10px;
 }
 #nav a:hover {
   color: #76b7ff;
